# main.go
@@ -2,8 +2,7 @@ package main
 
 import (
 	"github.com/xakimjonov/article/handlers"
-	"github.com/xakimjonov/article/modules"
-	"github.com/xakimjonov/article/storage"
+	"github.com/xakimjonov/article/storage/inmemeory"
 
 	"github.com/gin-gonic/gin"
 	swaggerFiles "github.com/swaggo/files"
@@ -20,22 +19,28 @@ import (
 // @license.url  http://www.apache.org/licenses/LICENSE-2.0.html
 func main() {
 
-	storage.InMemoryArticleData = make([]modules.Article, 0)
 	router := gin.Default()
+
+	im:= inmemeory.InMemeory{
+		Db: &inmemeory.DB{},
+	}
+	h := handlers.Handler{
+	IM: im,
+	}
 
 	v1 := router.Group("/v1")
 	{
-		v1.POST("/article", handlers.CreateArticle)
-		v1.GET("/article", handlers.GetArticleList)
-		v1.GET("/article/:id", handlers.GetArticleById)
-		v1.PUT("/article", handlers.UpdatedArticle)
-		v1.DELETE("/article/:id", handlers.DeleteArticle)
+		v1.POST("/article", h.CreateArticle)
+		v1.GET("/article", h.GetArticleList)
+		v1.GET("/article/:id", h.GetArticleById)
+		v1.PUT("/article", h.UpdatedArticle)
+		v1.DELETE("/article/:id", h.DeleteArticle)
 
-		v1.POST("/author", handlers.CreateAuthor)
-		v1.GET("/author", handlers.GetAuthorList)
-		v1.GET("/author/:id", handlers.GetAuthorById)
-		v1.PUT("/author", handlers.UpdateAuthor)
-		v1.DELETE("/author/:id", handlers.DeleteAuthor)
+		v1.POST("/author", h.CreateAuthor)
+		v1.GET("/author", h.GetAuthorList)
+		v1.GET("/author/:id", h.GetAuthorById)
+		v1.PUT("/author", h.UpdateAuthor)
+		v1.DELETE("/author/:id", h.DeleteAuthor)
 	}
 	router.GET("/swagger/*any", ginSwagger.WrapHandler(swaggerFiles.Handler))
 	router.Run(":5454") // listen and serve on 0.0.0.0:8080 (for windows "localhost:8080")
